Use Java 11 in main